option to skip health check, removed few validations and some UI changes

--- a/DigitalHealthCheckWeb/appsettings.json
+++ b/DigitalHealthCheckWeb/appsettings.json
@@ -16,23 +16,24 @@
     ]
   },
   "Auth": {
-    "ClientSecret": "",
-    "ClientId": "",
-    "AuthEndpoint": "",
-    "TokenEndpoint": ""
+    "ClientSecret": "dummy",
+    "ClientId": "test",
+    "AuthEndpoint": "/test",
+    "TokenEndpoint": "/mm"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=(localdb)\\mssqllocaldb;Database=DigitalHealthCheck;Trusted_Connection=True"
+    // "DatabaseConnection": "Data Source=DESKTOP-TIB9K2H;Initial Catalog=DigitalHealthCheck;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DatabaseConnection": "Data Source=DESKTOP-TIB9K2H;Initial Catalog=HealthChecks;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "GoogleAnalyticsId": "",
-  "EveryoneHealthReferralEmail": "",
-  "SupportEmail": "",
+  "EveryoneHealthReferralEmail": "ganesh.avabratha@healum.com",
+  "SupportEmail": "ganesh.avabratha@healum.com",
   "Mail": {
     "Host": "127.0.0.1",
-    "Port": 25, 
+    "Port": 25,
     "UseSsl": false,
-    "From": "",
+    "From": "ganesh.avabratha@healum.com",
     "Display Name": "NHS Digital Health Check"
   }
 }
