--- a/DigitalHealthCheckWeb/appsettings.json
+++ b/DigitalHealthCheckWeb/appsettings.json
@@ -24,7 +24,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // "DatabaseConnection": "Data Source=DESKTOP-TIB9K2H;Initial Catalog=DigitalHealthCheck;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    "DatabaseConnection": "Data Source=DESKTOP-TIB9K2H;Initial Catalog=HealthChecks;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DatabaseConnection": "Data Source=WINDOWS-TEST-2;Initial Catalog=HealthChecks;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=True;"
   },
   "GoogleAnalyticsId": "",
   "EveryoneHealthReferralEmail": "ganesh.avabratha@healum.com",
