--- a/UrlAvailabilityTests/appsettings.json
+++ b/UrlAvailabilityTests/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Data Source=DESKTOP-TIB9K2H;Initial Catalog=HealthChecks;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DatabaseConnection": "Data Source=WINDOWS-TEST-2;Initial Catalog=HealthChecks;Integrated Security=True"
   }
 }
